<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="16dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/llFromWhence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:orientation="vertical"
                        style="@style/SelectableItemBackground">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/secondaryText"
                            android:text="@string/from_whence"/>

                        <TextView
                            android:id="@+id/tvFromWhence"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textSize="24sp"
                            android:textColor="@color/primaryText"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/dividerColor"/>

                    <LinearLayout
                        android:id="@+id/llWhereTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:orientation="vertical"
                        style="@style/SelectableItemBackground">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/secondaryText"
                            android:text="@string/where_to"/>

                        <TextView
                            android:id="@+id/tvWhereTo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textSize="24sp"
                            android:textColor="@color/primaryText"/>

                    </LinearLayout>

                </LinearLayout>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fabReplace"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@mipmap/ic_swap_vert_white_24dp"
                    android:layout_gravity="center|end"
                    android:layout_marginRight="32dp"/>

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor"/>

            <LinearLayout
                android:id="@+id/llDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal"
                style="@style/SelectableItemBackground">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_calendar"/>

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginLeft="32dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/primaryText"
                    android:hint="@string/choose_date"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent">

        <FrameLayout
            android:id="@+id/flSearchRoutes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/SelectableItemBackground" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:text="@string/search_route"/>

        </FrameLayout>

    </FrameLayout>

</FrameLayout>
