<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:ignore="RtlHardcoded">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_height="350dp"
            android:layout_width="match_parent"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginBottom="94dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="Flexible space">

            <ImageView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/background"
                android:tint="#BB3E50B4" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="78dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                app:contentPaddingBottom="16dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                app:contentPaddingTop="16dp">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearLayoutContainerInfo"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:gravity="center"
                            android:layout_gravity="start"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textColor="@color/colorAccent"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/country"/>

                        <TextView
                            android:gravity="center"
                            android:id="@+id/textViewCountry"
                            android:layout_gravity="start"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:background="#CCCCCC"/>

                        <TextView
                            android:gravity="center"
                            android:layout_gravity="start"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textColor="@color/colorAccent"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/city"/>

                        <TextView
                            android:gravity="center"
                            android:id="@+id/textViewCity"
                            android:layout_gravity="start"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:background="#CCCCCC"/>

                        <TextView
                            android:gravity="center"
                            android:layout_gravity="start"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textColor="@color/colorAccent"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/station"/>

                        <TextView
                            android:gravity="center"
                            android:id="@+id/textViewStation"
                            android:layout_gravity="start"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/buttonDone"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginRight="32dp"
        android:elevation="8dp"
        android:src="@mipmap/ic_done_white_24dp"
        app:layout_anchor="@id/cardView"
        app:layout_anchorGravity="top|right|end"
        tools:ignore="RtlHardcoded"/>

</android.support.design.widget.CoordinatorLayout>